--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "protolang",
-  "version": "0.0.1",
-  "description": "ERROR: No README.md file found!",
+  "version": "0.0.3",
+  "description": "A programming language that compiles to JavaScript and emphasizes prototypes, integrity, and syntax.",
   "main": "lib/proto.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
