--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "commander": "~2.0.0",
     "ejs": "~0.8.4",
     "escodegen": "~0.0.27",
-    "esprima": "~1.0.4"
+    "esprima": "~1.0.4",
+    "mocha": "*"
   },
   "devDependencies": {},
   "scripts": {
